--- a/Eclipse/jsl-contact/src/main/resources/application.properties
+++ b/Eclipse/jsl-contact/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=jsl-core
+spring.application.name=jsl-contact
 server.port=8081
 
 spring.data.rest.base-path=/api
@@ -18,6 +18,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jackson.serialization.INDENT_OUTPUT=true
 
 #logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+kafka.bootstrap.servers=localhost:9092
+kafka.topic.name=my-topic
 
 
 
