--- a/Eclipse/jsl-contact/src/main/resources/application.properties
+++ b/Eclipse/jsl-contact/src/main/resources/application.properties
@@ -19,7 +19,8 @@ spring.jackson.serialization.INDENT_OUTPUT=true
 
 #logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
-kafka.bootstrap.servers=localhost:9092
+#kafka.bootstrap.servers=kafka1:9092
+kafka.bootstrap.servers=host.docker.internal:29092
 kafka.topic.name=my-topic
 
 
