--- a/Eclipse/jsl-ui-server/src/main/resources/jsl-ui-server.properties
+++ b/Eclipse/jsl-ui-server/src/main/resources/jsl-ui-server.properties
@@ -4,13 +4,13 @@ server.port=8080
 #spring.mvc.view.prefix=/WEB-INF/jsp/
 #spring.mvc.view.suffix=.jsp
 
-#jobContacts.host=http://localhost:8081
-#positions.host=http://localhost:8082
-#users.host=http://localhost:8081
+jobContacts.host=http://localhost:8081
+positions.host=http://localhost:8082
+users.host=http://localhost:8081
 
-jobContacts.host=http://jsl-contacts:8081
-positions.host=http://jsl-positions:8082
-users.host=http://jsl-contacts:8081
+#jobContacts.host=http://jsl-contacts:8081
+#positions.host=http://jsl-positions:8082
+#users.host=http://jsl-contacts:8081
 
 jobContacts.uri=${jobContacts.host}/jobcontacts
 positions.uri=${positions.host}/positions
