--- a/Eclipse/jsl-ui-server/pom.xml
+++ b/Eclipse/jsl-ui-server/pom.xml
@@ -36,6 +36,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
