poprest  Please enter the commit message for your changes. Lines starting

--- a/Eclipse/docker.properties
+++ b/Eclipse/docker.properties
@@ -4,4 +4,6 @@ jsl-ui.ARG_HOST_POSITIONS=http://jsl-position:8082
 jsl-ui.ARG_HOST_USERS=http://jsl-contact:8081
 jsl-ui.PORT=8080
 jsl-contact.ARG_EXPOSE_PORT=8081
+jsl-contact.PORT=8081
 jsl-position.ARG_EXPOSE_PORT=8082
+jsl-position.PORT=8082
